k8s/keycloak/keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-svc
  # labels:
  #   app: keycloak
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: keycloak
  type: NodePort
  # clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:20.0.2
          # args: ['start', '--cache-stack=kubernetes']
          args: ['start-dev', '--health-enabled=true', '--proxy=edge']
          volumeMounts:
            - name: certs
              mountPath: '/etc/certs'
              readOnly: true
          ports:
            - name: jgroups
              containerPort: 7600
            - name: https
              containerPort: 8443
            - name: http
              containerPort: 8080
          readinessProbe:
            # httpGet:
            #   scheme: HTTPS
            #   path: /health/ready
            #   port: 8443
            # initialDelaySeconds: 60
            # periodSeconds: 1
            httpGet:
              path: /realms/master
              port: 8080
      volumes:
        - name: certs
          secret:
            secretName: auth-tls-secret
