k8s/keycloak/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  # annotations:
  #   kubernetes.io/ingress.class: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    # kubernetes.io/ingress.class: alb
    # alb.ingress.kubernetes.io/scheme: internet-facing
    # alb.ingress.kubernetes.io/target-type: ip
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    # alb.ingress.kubernetes.io/backend-protocol: 'HTTPS'
    # alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:633589447460:certificate/9d7d08e1-fc92-4b90-8584-4d656b9eed46
spec:
  ingressClassName: nginx
  # tls:
  #   - hosts:
  #       - auth.findyourjob.tech
  #     secretName: auth-tls-secret
  rules:
    - host: auth.findyourjob.tech
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
